--- a/styles/css/board.css
+++ b/styles/css/board.css
@@ -151,7 +151,7 @@ div.task h3 {
 .default-color { background-color: #ffffff; }
 
 .card {
-   padding: 10px;
+    padding: 10px;
 }
 
 .card-title {
@@ -163,7 +163,7 @@ div.task h3 {
     display: block;
 }
 
-.addNewCard {
+.deleteDay, .addNewCard {
     float: right;
     padding-right: 30px;
     color:  green;
@@ -172,4 +172,17 @@ div.task h3 {
 .removeCard {
     padding: 12px;
     color: #444;
+}
+
+.addNewCard:hover{
+    cursor: pointer;
+}
+.deleteDay{
+    color: red;
+}
+.deleteDay:hover{
+    cursor: pointer;
+}
+.columnHeader a:hover{
+    text-decoration: none;
 }
