--- a/styles/css/app.css
+++ b/styles/css/app.css
@@ -1,1 +1,15 @@
 /* app css stylesheet */
+
+.leftbar_wrapper{
+    background: #F5F5F5;
+    height: 100%;
+    padding: 10px;
+    box-shadow: 1px 0 2px #999;
+}
+.drag-container{
+}
+.day-container{
+    border: 1px dashed #666;
+    padding: 2px;
+    margin-top: 12px;
+}
