--- a/css/app.css
+++ b/css/app.css
@@ -52,6 +52,45 @@ input {
 	border: none;
 }
 
+#divActivities {
+	width:350px;
+	height:600px;padding:10px;
+	border:1px solid #aaaaaa;
+	position: relative;
+	top:10px;}
+
+.divDay {
+	width:350px;
+	height:474px;padding:10px;
+	border:1px solid #aaaaaa;
+	position: relative;
+	top: -680px;
+	left: 400px;
+}
+
+.labelsDay{
+	position: relative;
+	top: -640px;
+	left: 400px;
+	padding: 5px;
+}
+
+#buttonDay{
+	position: relative;
+	top: -650px;
+	left: 400px;
+}
+
+.canvasGraph{
+	position: relative;
+	top: -700px;
+	left: 680px;
+	border:1px solid #aaaaaa;
+
+}
+
+
+
 /*
 input[type=submit] {
 	padding:5px 15px; background:#ccc; border:0 none;
