--- a/styles/css/app.css
+++ b/styles/css/app.css
@@ -1,5 +1,4 @@
 /* app css stylesheet */
-
 #activityForm label{
     display: block;
     float: left;
@@ -80,4 +79,51 @@ table,  th{
     border: 1px dashed #666;
     padding: 2px;
     margin-top: 12px;
+}
+
+/* graphical timeline representation*/
+.progress-bar-presentation {
+    background-color: blue;
+}
+.progress-bar-group-work {
+    background-color: red;
+}
+.progress-bar-discussion {
+    background-color: green;
+}
+.progress-bar-break {
+    background-color: yellow;
+}
+
+/*Angular Animation*/
+
+.animate-enter, 
+.animate-leave
+{ 
+    -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    position: relative;
+    display: block;
+} 
+
+.animate-enter.animate-enter-active, 
+.animate-leave {
+    opacity: 1;
+    top: 0;
+    height: 30px;
+}
+
+.animate-leave.animate-leave-active,
+.animate-enter {
+    opacity: 0;
+    top: -50px;
+    height: 0px;
+}
+
+ul.cards > li:hover{
+    border: 1px solid #333;
+    transition: linear all .1s;
 }
