overall design of application
- overall layout colours
- all buttons (add activity, add day, OK, cancel)
- day box design

--- a/views/partials/modal-popup.html
+++ b/views/partials/modal-popup.html
@@ -27,5 +27,5 @@
         </div>
     </script>  
     <button class="btn btn-primary" ng-click="open('sm')">Add Activity</button>
-    <button class="btn btn-default" ng-click="addDay()">Add Day</button>
+    <button class="btn btn-add-day" ng-click="addDay()">Add Day</button>
 </div> <!--end of popup modal controller-->
