--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,11 +1,15 @@
 <nav class="navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">                  
-            <a href="#" class="navbar-brand">Agenda Builder</a>
+            <a href="#" class="navbar-brand"><img src="../../styles/img/logo.png" width="5%" >genda Builder</a>
         </div>
         <div class="navbar-collapse collapse" id="navbar" aria-expanded="false" style="height: 1px;">
             <ul class="nav navbar-nav">                        
+                <!-- 
+                
                 <li><a href="#about">About Us</a></li>                      
+                
+                -->
             </ul>
         </div><!--/.nav-collapse -->
     </div>
