--- a/views/partials/activity.html
+++ b/views/partials/activity.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-sm-10">
             <!--<span class="btn-link"><a data-no-drag target=_top href="https://github.com/a5hik/ng-sortable">test no-drag href</a></span>-->
-            <span class="card-title">{{item.getLength()}}-{{item.getName()}}</span>
+            <span class="card-title">{{item.getStart()}}-{{item.getEnd()}}-{{item.getName()}}</span>
         </div>                                   
     </div>
 </div>
