--- a/views/partials/activity.html
+++ b/views/partials/activity.html
@@ -3,6 +3,8 @@
             <div class="col-sm-10">
                 <!--<span class="btn-link"><a data-no-drag target=_top href="https://github.com/a5hik/ng-sortable">test no-drag href</a></span>-->
                 <span class="card-title">{{item.getLength()}}-{{item.getName()}}</span>
+                <span class="card-title">{{$index}}-{{item.getName()}}</span>
+                <span class="card-title">{{item.getStartTime()}}-{{item.getName()}}</span>
             </div>                                   
         </div>
     </div>
