--- a/views/partials/leftsidebar.html
+++ b/views/partials/leftsidebar.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-sm-10">
                         <!--<span class="btn-link"><a data-no-drag target=_top href="https://github.com/a5hik/ng-sortable">test no-drag href</a></span>-->
-                        <span class="card-title">{{act.getName()}}-{{act.getLength()}}</span>
+                        <span class="card-title">{{act.getName()}}-{{act.getLength()}} Min</span>
                     </div>                                   
                 </div>
             </div>
