Consistency in order and format of data in activities

--- a/views/partials/activity.html
+++ b/views/partials/activity.html
@@ -2,9 +2,9 @@
         <div class="row">
             <div class="col-sm-10">
                 <!--<span class="btn-link"><a data-no-drag target=_top href="https://github.com/a5hik/ng-sortable">test no-drag href</a></span>-->
-                <span class="card-title">{{item.getLength()}}-{{item.getName()}}</span>
-                <span class="card-title">{{$index}}</span>
-                <span>AccLength: {{day.getAccLength()}}Min</span>
+                <span class="card-title">{{item.getName()}} - {{item.getLength()}} min</span>
+                <!-- <span class="card-title">{{$index}}</span> -->
+                <span>Length: {{day.getAccLength()}} min</span>
             </div>                                   
         </div>
     </div>
