--- a/views/partials/activity.html
+++ b/views/partials/activity.html
@@ -4,7 +4,7 @@
                 <!--<span class="btn-link"><a data-no-drag target=_top href="https://github.com/a5hik/ng-sortable">test no-drag href</a></span>-->
                 <span class="card-title">{{item.getName()}} - {{item.getLength()}} min</span>
                 <!-- <span class="card-title">{{$index}}</span> -->
-                <span>Length: {{day.getAccLength()}} min</span>
+                <!-- <span>Length: {{day.getAccLength()}} min</span> -->
             </div>                                   
         </div>
     </div>
