resolved merge conflict

--- a/views/partials/modal-popup.html
+++ b/views/partials/modal-popup.html
@@ -6,7 +6,7 @@
         <div class="modal-body">
         <div class="row">
         <div class="form-group">
-        <input ng-model="activityName" placeholder="Name" type="text" class="form-control"/>
+        <input ng-model="activityName" ng-model="name" placeholder="Name" type="text" class="form-control"/>
         </div> 
         <div class="form-group">
         <input ng-model="activityDuration" placeholder="Duration in Min" type="text" class="form-control"/>             
