--- a/views/partials/leftsidebar.html
+++ b/views/partials/leftsidebar.html
@@ -1,13 +1,15 @@
 <div style=" border: dashed 1px darkgrey;">
-    <ul class="cards card-list" as-sortable="sortOptionListener" ng-model="parkedActivites">
-        <li style="background:{{act.getColor()}}" class="card" ng-repeat="act in parkedActivites" data-as-sortable-item>
+    <ul class="cards card-list" as-sortable="sortOptionListener" ng-model="parkedActivites"> 
+        <li style="background:{{act.getColor()}}" class="card" ng-repeat="act in parkedActivites" data-as-sortable-item >
+            <a title="Delete Activity" ng-click="removeActivity($index)">   
+                <i class="glyphicon glyphicon-remove-sign deleteActivity"></i></a>
             <div class="samsa" as-sortable-item-handle>
                 <div class="row">
                     <div class="col-sm-10">
                         <!--<span class="btn-link"><a data-no-drag target=_top href="https://github.com/a5hik/ng-sortable">test no-drag href</a></span>-->
                         <span class="card-title">{{act.getName()}} - {{act.getLength()}} min</span>
                     </div>                                   
-                </div>
+                </div>  
             </div>
         </li>
     </ul>
