--- a/views/partials/newhtml.html
+++ b/views/partials/newhtml.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="change()">OK</button>
+        <button class="btn btn-primary" ng-click="change()">Modify</button>
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
         </div>
     </script>  
