--- a/views/partials/newhtml.html
+++ b/views/partials/newhtml.html
@@ -1,30 +1,41 @@
-<div ng-controller="MainCtrl">
+<div ng-controller="ModalCtrl">
     <script type="text/ng-template" id="myTaskviewContent.html">
         <div class="modal-header">
         <h3 class="modal-title">Edit Activity</h3>
         </div>
         <div class="modal-body">
-        <div class="row">
-        <div class="form-group">
-        <input ng-model="activityName" ng-dname="" placeholder="Name" type="text" class="form-control"/>
-        </div> 
-        <div class="form-group">
-        <input ng-model="activityDuration" ng-dtime="" placeholder="Duration in Min" type="text" class="form-control"/>             
-        </div>  
-        <div class="form-group">                    
-        <select class="form-control" ng-model="activityType"
-        ng-options="opt as opt.label for opt in options">
-        </select>
-        </div>  
-        <div class="form-group">
-        <textarea  ng-model="activityDesc" placeholder="Description" class="form-control" rows="3"></textarea>
-        </div>  
+       <div class="row">
+                <form name="formValidate">
+                    <div class="form-group">
+                        <input name="activityName" ng-model="activityName" required placeholder={{item.setname()}} type="text" class="form-control"/>
+                        <span style="color:#AD3333" ng-show="formValidate.activityName.$dirty && formValidate.activityName.$invalid">
+                            <span ng-show="formValidate.activityName.$error.required">Your activity needs a name</span>
+                        <span>    
+                    </div> 
+                    <div class="form-group">
+                        <input name="activityDuration" ng-model="activityDuration" required placeholder="Duration in Min" type="number" min="1" class="form-control"/>
+                        <span style="color:#AD3333" ng-show="formValidate.activityDuration.$dirty && formValidate.activityDuration.$invalid">
+                            <span ng-show="formValidate.activityDuration.$error.required">Your activity needs a duration</span> 
+                            <span ng-show="formValidate.activityDuration.$error.number">Please introduce a number!</span> 
+                             <span ng-show="formValidate.activityDuration.$error.min">The minimum duration is 1</span> 
+                        </span>
+                    </div> 
+                </form> 
+                <div class="form-group">                    
+                    <select class="form-control" ng-model="activityType"
+                        ng-options="opt as opt.label for opt in options">
+                    </select>
+                </div>  
+                <div class="form-group">
+                    <textarea  ng-model="activityDesc" placeholder="Description" class="form-control" rows="3"></textarea>
+                </div>  
+            </div>
         </div>
 
         <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="change()">Modify</button>
-        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-        </div>
-    </script>  
+            <button class="btn btn-primary" ng-disabled="formValidate.$invalid" ng-click="Change()">Modify</button>
+            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+        </div>  
+    </script> 
     
 </div> <!--end of popup modal controller-->
