--- a/styles/css/app.css
+++ b/styles/css/app.css
@@ -228,4 +228,14 @@ ul.cards > li:hover{
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 4px ##FF6600;
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 4px ##FF6600;
 }
+
+.arrowBreak{
+  color: #991B41;
+  position: relative;
+  top: -16px;
+  left: 52px;
+  
+  
+
+}
   
