--- a/views/partials/modal-popup.html
+++ b/views/partials/modal-popup.html
@@ -1,7 +1,7 @@
-<div ng-controller="ModalCtrl">
+<div>
     <script type="text/ng-template" id="myModalContent.html">
         <div class="modal-header">
-            <h3 class="modal-title">Add New Activity</h3>
+            <h3 class="modal-title">{{modalTitle}}</h3>
         </div>
         <div class="modal-body">
             <div class="row">
