fixed some design

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">                  
-            <a href="#" class="navbar-brand"><img src="../../styles/img/icon.png" width="7%"> Agenda Builder</a>
+            <a href="#" class="navbar-brand"><img src="header.png" width="35%"></a>
 
         </div>
         <div class="navbar-collapse collapse" id="navbar" aria-expanded="false" style="height: 1px;">
