--- a/views/partials/activity.html
+++ b/views/partials/activity.html
@@ -7,7 +7,7 @@
                
             <div class="col-sm-10">
                 <!--<span class="btn-link"><a data-no-drag target=_top href="https://github.com/a5hik/ng-sortable">test no-drag href</a></span>-->
-                <span class="card-title">{{item.getStart()}} - {{item.getEnd()}} - {{item.getName()}}</span>
+                <span class="card-title">{{item.getStart()}} - {{item.getEnd()}}  {{item.getName()}} <br/> [{{item.getLength()}} Min]</span>
                 <!-- <span class="card-title">{{$index}}</span> -->
                 <!-- <span>Length: {{day.getAccLength()}} min</span> -->
             </div>                                   
